feat: database creation, database client creation, basic database query

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/app/generated/prisma
+
+# Images and videos
+/public/content
+
+# Database
+dev.db
