--- a/.gitignore
+++ b/.gitignore
@@ -40,10 +40,11 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/app/generated/prisma
+/src/app/generated/prisma
 
 # Images and videos
 /public/content
 
 # Database
 dev.db
+/prisma/dev.db
